--- a/BorrowBooks/BorrowBooks/Base.lproj/Main.storyboard
+++ b/BorrowBooks/BorrowBooks/Base.lproj/Main.storyboard
@@ -2,12 +2,13 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="F14-PV-rqq">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Search-->
         <scene sceneID="xad-n9-zpB">
             <objects>
-                <viewController id="5px-sY-Rgz" sceneMemberID="viewController">
+                <viewController id="5px-sY-Rgz" customClass="BBSearchViewController" customModule="BorrowBooks" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="IlJ-ph-1Wf"/>
                         <viewControllerLayoutGuide type="bottom" id="j6e-sw-WBD"/>
@@ -43,23 +44,94 @@
             <point key="canvasLocation" x="-742" y="984"/>
         </scene>
         <!--More-->
-        <scene sceneID="UEr-A5-bAt">
+        <scene sceneID="PIW-BT-aCN">
             <objects>
-                <viewController id="FaA-bS-OHS" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="ebr-CY-9ts"/>
-                        <viewControllerLayoutGuide type="bottom" id="CN8-mj-mwk"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="5E5-Aj-6O6">
+                <tableViewController id="T9t-Oi-zdD" customClass="BBMoreViewController" customModule="BorrowBooks" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="116" sectionHeaderHeight="22" sectionFooterHeight="22" id="Pus-SL-odh">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="More" id="eUH-eU-Y5V"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="giR-x7-BpZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="90" id="leg-rU-BSQ" customClass="AccountTableCell" customModule="BorrowBooks" customModuleProvider="target">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="leg-rU-BSQ" id="tCQ-4f-mhv">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="N9O-gw-hXe">
+                                            <rect key="frame" x="23" y="15" width="60" height="60"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="60" id="miI-xu-G2N"/>
+                                                <constraint firstAttribute="height" constant="60" id="uFE-Ha-kcQ"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="去登陆或注册" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pFJ-88-o9P">
+                                            <rect key="frame" x="269" y="34" width="108" height="21.5"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UserName" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vyk-tY-VXR">
+                                            <rect key="frame" x="130" y="38" width="72.5" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UserName" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BbY-v2-cnO">
+                                            <rect key="frame" x="130" y="64" width="72.5" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UserName" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FCJ-nG-mwe">
+                                            <rect key="frame" x="130" y="12" width="72.5" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="FCJ-nG-mwe" firstAttribute="top" secondItem="tCQ-4f-mhv" secondAttribute="topMargin" constant="4" id="424-rJ-C6a"/>
+                                        <constraint firstAttribute="centerX" secondItem="pFJ-88-o9P" secondAttribute="centerX" constant="-40" id="ERd-WS-2jZ"/>
+                                        <constraint firstItem="FCJ-nG-mwe" firstAttribute="leading" secondItem="N9O-gw-hXe" secondAttribute="trailing" constant="47" id="NCT-IF-IVa"/>
+                                        <constraint firstItem="BbY-v2-cnO" firstAttribute="leading" secondItem="FCJ-nG-mwe" secondAttribute="leading" id="NrE-No-Zud"/>
+                                        <constraint firstItem="vyk-tY-VXR" firstAttribute="leading" secondItem="FCJ-nG-mwe" secondAttribute="leading" id="OYn-BS-QVs"/>
+                                        <constraint firstItem="BbY-v2-cnO" firstAttribute="leading" secondItem="vyk-tY-VXR" secondAttribute="leading" id="c2d-Xb-6t3"/>
+                                        <constraint firstItem="BbY-v2-cnO" firstAttribute="top" secondItem="vyk-tY-VXR" secondAttribute="bottom" constant="8" id="hX7-3W-M3Q"/>
+                                        <constraint firstAttribute="centerY" secondItem="N9O-gw-hXe" secondAttribute="centerY" id="iKV-dz-UpE"/>
+                                        <constraint firstItem="vyk-tY-VXR" firstAttribute="top" secondItem="FCJ-nG-mwe" secondAttribute="bottom" constant="8" id="oKn-h6-kHW"/>
+                                        <constraint firstAttribute="centerX" secondItem="pFJ-88-o9P" secondAttribute="centerX" id="rrq-E6-8gn"/>
+                                        <constraint firstAttribute="centerY" secondItem="pFJ-88-o9P" secondAttribute="centerY" id="se1-OM-rhP"/>
+                                        <constraint firstItem="N9O-gw-hXe" firstAttribute="leading" secondItem="tCQ-4f-mhv" secondAttribute="leadingMargin" constant="15" id="uIX-fK-NKM"/>
+                                        <constraint firstAttribute="centerX" secondItem="pFJ-88-o9P" secondAttribute="centerX" constant="20" id="yGn-y6-TcZ"/>
+                                        <constraint firstItem="vyk-tY-VXR" firstAttribute="leading" secondItem="BbY-v2-cnO" secondAttribute="leading" id="yI2-Gp-XAZ"/>
+                                    </constraints>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="rrq-E6-8gn"/>
+                                            <exclude reference="yGn-y6-TcZ"/>
+                                        </mask>
+                                    </variation>
+                                </tableViewCellContentView>
+                                <color key="backgroundColor" red="0.0" green="0.53725490200000003" blue="0.44705882349999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <outlet property="avatar" destination="N9O-gw-hXe" id="aVA-cl-HAA"/>
+                                    <outlet property="cityLabel" destination="vyk-tY-VXR" id="onk-3u-YdN"/>
+                                    <outlet property="emailLabel" destination="BbY-v2-cnO" id="ih2-tY-e1Y"/>
+                                    <outlet property="nameLabel" destination="FCJ-nG-mwe" id="YGl-zm-RO4"/>
+                                    <outlet property="reminderLabel" destination="tCQ-4f-mhv" id="Csh-GP-Ceh"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="T9t-Oi-zdD" id="QRZ-JN-kBu"/>
+                            <outlet property="delegate" destination="T9t-Oi-zdD" id="D3P-1a-egA"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="More" id="MLl-RE-BdN"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bZg-Zp-urA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-742" y="1708"/>
+            <point key="canvasLocation" x="-742" y="1733"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="pp3-6n-4b1">
@@ -75,7 +147,7 @@
                         <segue destination="5px-sY-Rgz" kind="relationship" relationship="viewControllers" id="Xch-iK-qNg"/>
                         <segue destination="Lkg-pV-yoQ" kind="relationship" relationship="viewControllers" id="5GI-TE-vGB"/>
                         <segue destination="HYe-eG-rDA" kind="relationship" relationship="viewControllers" id="f7S-5U-57u"/>
-                        <segue destination="FaA-bS-OHS" kind="relationship" relationship="viewControllers" id="lrp-Gm-3te"/>
+                        <segue destination="T9t-Oi-zdD" kind="relationship" relationship="viewControllers" id="J1y-HV-iVX"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TXi-MV-trf" userLabel="First Responder" sceneMemberID="firstResponder"/>
